--- a/recycle.API/appsettings.json
+++ b/recycle.API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "cs": "Server=.;Database=recycle.API;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "Database": "Server=.;Database=recycleDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
