--- a/recycle.API/recycle.API.csproj
+++ b/recycle.API/recycle.API.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.10" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.10">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -17,10 +18,11 @@
     </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.6" />
   </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\recycle.Application\recycle.Application.csproj" />
-    <ProjectReference Include="..\recycle.Infrastructure\recycle.Infrastructure.csproj" />
-  </ItemGroup>
+	
+    <ItemGroup>
+		<ProjectReference Include="..\recycle.Domain\recycle.Domain.csproj" />
+		<ProjectReference Include="..\recycle.Application\recycle.Application.csproj" />
+		<ProjectReference Include="..\recycle.Infrastructure\recycle.Infrastructure.csproj" />
+	</ItemGroup>
 
 </Project>
