--- a/recycle.Infrastructure/recycle.Infrastructure.csproj
+++ b/recycle.Infrastructure/recycle.Infrastructure.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.10" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.10">
       <PrivateAssets>all</PrivateAssets>
@@ -20,5 +21,7 @@
     <ProjectReference Include="..\recycle.Application\recycle.Application.csproj" />
     <ProjectReference Include="..\recycle.Domain\recycle.Domain.csproj" />
   </ItemGroup>
+
+	
 
 </Project>
