--- a/recycle.Infrastructure/recycle.Infrastructure.csproj
+++ b/recycle.Infrastructure/recycle.Infrastructure.csproj
@@ -16,7 +16,8 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.10" />
-    <PackageReference Include="Stripe.net" Version="49.2.0" />
+    <PackageReference Include="PayoutsSdk" Version="1.1.1" />
+    <PackageReference Include="PayPalCheckoutSdk" Version="1.0.4" />
   </ItemGroup>
 
   <ItemGroup>
