--- a/recycle.API/appsettings.json
+++ b/recycle.API/appsettings.json
@@ -7,8 +7,8 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        //"Database": "Server=.;Database=RecycleDB;Trusted_Connection=True;TrustServerCertificate=True",
-        "Database": "Server=.\\SQLEXPRESS;Initial Catalog=RecycleDB;Trusted_Connection=True;TrustServerCertificate=True"
+        "Database": "Server=.;Database=RecycleDB;Trusted_Connection=True;TrustServerCertificate=True",
+        //"Database": "Server=.\\SQLEXPRESS;Initial Catalog=RecycleDB;Trusted_Connection=True;TrustServerCertificate=True"
 
     },
     "PayPal": {
