--- a/recycle.Infrastructure/recycle.Infrastructure.csproj
+++ b/recycle.Infrastructure/recycle.Infrastructure.csproj
@@ -26,6 +26,10 @@
 		<ProjectReference Include="..\recycle.Domain\recycle.Domain.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Migrations\" />
+	</ItemGroup>
+
 
 
 </Project>
