--- a/recycle.API/appsettings.json
+++ b/recycle.API/appsettings.json
@@ -21,6 +21,10 @@
   "Stripe": {
     "SecretKey": "sk_test_123456",
     "WebhookSecret": "whsec_123456"
+  },
+  "Fireworks": {
+    "ApiKey": "fw_3ZGRjbSbQcjL72K1HDgBGE7a"
+
   }
 }
 
